5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4137/executions/1593_1802.log
== TEST (2019-03-24 08:45:09) 
-- CODE:
from math import *
n1 = int(input("Pontos de vida do monstro:"))
n2 = int(input("Valor primeiro d20:"))
n3 = int(input("Valor segundo d20:"))
d1 = (5.n2)**0.5
d2 = n3/3
d3 = pi**d2
dano = d1+d3
print(int(dano))
-- ERROR:
File "XXXX", line 5
    d1 = (5.n2)**0.5
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 08:45:20) 
-- CODE:
from math import *
n1 = int(input("Pontos de vida do monstro:"))
n2 = int(input("Valor primeiro d20:"))
n3 = int(input("Valor segundo d20:"))
d1 = (5*n2)**0.5
d2 = n3/3
d3 = pi**d2
dano = d1+d3
print(int(dano))
-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 08:45:44) 
-- CODE:
from math import *
n1 = int(input("Pontos de vida do monstro:"))
n2 = int(input("Valor primeiro d20:"))
n3 = int(input("Valor segundo d20:"))
d1 = (5*n2)**0.5
d2 = n3/3
d3 = pi**d2
dano = d1+d3
print(int(n1-dano))
-- OUTPUT:
187
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 08:45:57) 
-- CODE:
from math import *
n1 = int(input("Pontos de vida do monstro:"))
n2 = int(input("Valor primeiro d20:"))
n3 = int(input("Valor segundo d20:"))
d1 = (5*n2)**0.5
d2 = n3/3
d3 = pi**d2
dano = d1+d3
print(int(n1-dano))
-- EXECUTION TIME:
0.161677
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
187
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
284
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
496
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 08:45:59) 
-- CODE:
from math import *
n1 = int(input("Pontos de vida do monstro:"))
n2 = int(input("Valor primeiro d20:"))
n3 = int(input("Valor segundo d20:"))
d1 = (5*n2)**0.5
d2 = n3/3
d3 = pi**d2
dano = d1+d3
print(int(n1-dano))
-- OUTPUT:
187
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 08:50:19) 
-- CODE:
from math import *
n1 = int(input("Pontos de vida do monstro:"))
n2 = int(input("Valor primeiro d20:"))
n3 = int(input("Valor segundo d20:"))
d1 = int((5*n2)**0.5)
d2 = int(n3/3)
d3 = int(pi**d2)
dano = d1+d3
print(int(n1-dano))
-- OUTPUT:
189
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 09:28:36) 
-- CODE:
from math import *
n1 = int(input("Pontos de vida do monstro:"))
n2 = int(input("Valor primeiro d20:"))
n3 = int(input("Valor segundo d20:"))
d1 = int((5*n2)**0.5)
d2 = int(n3/3)
d3 = int(pi**d2)
dano = d1+d3
print(int(n1-dano))
-- OUTPUT:
189
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 09:29:18) 
-- CODE:
from math import *
n1 = int(input("Pontos de vida do monstro:"))
n2 = int(input("Valor primeiro d20:"))
n3 = int(input("Valor segundo d20:"))
d1 = int((5*n2)**0.5)
d2 = (n3/3)
d3 = int(pi**d2)
dano = d1+d3
print(int(n1-dano))
-- OUTPUT:
189
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 09:29:25) 
-- CODE:
from math import *
n1 = int(input("Pontos de vida do monstro:"))
n2 = int(input("Valor primeiro d20:"))
n3 = int(input("Valor segundo d20:"))
d1 = int((5*n2)**0.5)
d2 = (n3/3)
d3 = int(pi**d2)
dano = d1+d3
print(int(n1-dano))
-- EXECUTION TIME:
0.121673
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
189
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
286
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 09:29:26) 
-- CODE:
from math import *
n1 = int(input("Pontos de vida do monstro:"))
n2 = int(input("Valor primeiro d20:"))
n3 = int(input("Valor segundo d20:"))
d1 = int((5*n2)**0.5)
d2 = (n3/3)
d3 = int(pi**d2)
dano = d1+d3
print(int(n1-dano))
-- EXECUTION TIME:
0.0991302
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
189
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
286
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
189
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 09:29:26) 
-- CODE:
from math import *
n1 = int(input("Pontos de vida do monstro:"))
n2 = int(input("Valor primeiro d20:"))
n3 = int(input("Valor segundo d20:"))
d1 = int((5*n2)**0.5)
d2 = (n3/3)
d3 = int(pi**d2)
dano = d1+d3
print(int(n1-dano))
-- EXECUTION TIME:
0.183962
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
497
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:

-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
189
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 09:29:26) 
-- CODE:
from math import *
n1 = int(input("Pontos de vida do monstro:"))
n2 = int(input("Valor primeiro d20:"))
n3 = int(input("Valor segundo d20:"))
d1 = int((5*n2)**0.5)
d2 = (n3/3)
d3 = int(pi**d2)
dano = d1+d3
print(int(n1-dano))
-- EXECUTION TIME:
0.131488
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
286
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
189
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
189
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 09:29:27) 
-- CODE:
from math import *
n1 = int(input("Pontos de vida do monstro:"))
n2 = int(input("Valor primeiro d20:"))
n3 = int(input("Valor segundo d20:"))
d1 = int((5*n2)**0.5)
d2 = (n3/3)
d3 = int(pi**d2)
dano = d1+d3
print(int(n1-dano))
-- OUTPUT:
189
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 09:29:27) 
-- CODE:
from math import *
n1 = int(input("Pontos de vida do monstro:"))
n2 = int(input("Valor primeiro d20:"))
n3 = int(input("Valor segundo d20:"))
d1 = int((5*n2)**0.5)
d2 = (n3/3)
d3 = int(pi**d2)
dano = d1+d3
print(int(n1-dano))
-- EXECUTION TIME:
0.230025
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
189
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:

-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
Pontos de vida do monstro:Valor primeiro d20:Valor segundo d20:497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 09:29:27) 
-- CODE:
from math import *
n1 = int(input("Pontos de vida do monstro:"))
n2 = int(input("Valor primeiro d20:"))
n3 = int(input("Valor segundo d20:"))
d1 = int((5*n2)**0.5)
d2 = (n3/3)
d3 = int(pi**d2)
dano = d1+d3
print(int(n1-dano))
-- EXECUTION TIME:
0.281045
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
286
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
497
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 09:29:38) 
-- CODE:
from math import *
n1 = int(input("Pontos de vida do monstro:"))
n2 = int(input("Valor primeiro d20:"))
n3 = int(input("Valor segundo d20:"))
d1 = int((5*n2)**0.5)
d2 = (n3/3)
d3 = int(pi**d2)
dano = d1+d3
print(int(n1-dano))
-- EXECUTION TIME:
0.28176
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
189
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
286
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 09:29:59) 
-- CODE:
from math import *
n1 = int(input("Pontos de vida do monstro:"))
n2 = int(input("Valor primeiro d20:"))
n3 = int(input("Valor segundo d20:"))
d1 = ((5*n2)**0.5)
d2 = (n3/3)
d3 = int(pi**d2)
dano = d1+d3
print(int(n1-dano))
-- EXECUTION TIME:
0.117518
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
188
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
285
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
496
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 09:29:59) 
-- CODE:
from math import *
n1 = int(input("Pontos de vida do monstro:"))
n2 = int(input("Valor primeiro d20:"))
n3 = int(input("Valor segundo d20:"))
d1 = ((5*n2)**0.5)
d2 = (n3/3)
d3 = int(pi**d2)
dano = d1+d3
print(int(n1-dano))
-- OUTPUT:
188
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 09:30:16) 
-- CODE:
from math import *
n1 = int(input("Pontos de vida do monstro:"))
n2 = int(input("Valor primeiro d20:"))
n3 = int(input("Valor segundo d20:"))
d1 = int((5*n2)**0.5)
d2 = (n3/3)
d3 = int(pi**d2)
dano = d1+d3
print(int(n1-dano))
-- OUTPUT:
189
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 09:30:22) 
-- CODE:
from math import *
n1 = int(input("Pontos de vida do monstro:"))
n2 = int(input("Valor primeiro d20:"))
n3 = int(input("Valor segundo d20:"))
d1 = int((5*n2)**0.5)
d2 = (n3/3)
d3 = int(pi**d2)
dano = d1+d3
print(int(n1-dano))
-- EXECUTION TIME:
0.262491
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
189
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
286
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 09:30:27) 
-- CODE:
from math import *
n1 = int(input("Pontos de vida do monstro:"))
n2 = int(input("Valor primeiro d20:"))
n3 = int(input("Valor segundo d20:"))
d1 = int((5*n2)**0.5)
d2 = (n3/3)
d3 = int(pi**d2)
dano = d1+d3
print(n1-dano))
-- ERROR:
File "XXXX", line 9
    print(n1-dano))
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 09:30:32) 
-- CODE:
from math import *
n1 = int(input("Pontos de vida do monstro:"))
n2 = int(input("Valor primeiro d20:"))
n3 = int(input("Valor segundo d20:"))
d1 = int((5*n2)**0.5)
d2 = (n3/3)
d3 = int(pi**d2)
dano = d1+d3
print(n1-dano)
-- EXECUTION TIME:
0.16861
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
Pontos de vida do monstro:Valor primeiro d20:Valor segundo d20:189
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
Pontos de vida do monstro:Valor primeiro d20:Valor segundo d20:286
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
Pontos de vida do monstro:Valor primeiro d20:Valor segundo d20:497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 09:30:33) 
-- CODE:
from math import *
n1 = int(input("Pontos de vida do monstro:"))
n2 = int(input("Valor primeiro d20:"))
n3 = int(input("Valor segundo d20:"))
d1 = int((5*n2)**0.5)
d2 = (n3/3)
d3 = int(pi**d2)
dano = d1+d3
print(n1-dano)
-- OUTPUT:
189
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 09:31:16) 
-- CODE:
from math import *
n1 = int(input("Pontos de vida do monstro:"))
n2 = int(input("Valor primeiro d20:"))
n3 = int(input("Valor segundo d20:"))
d1 = int((5*n2)**0.5)
d2 = (n3/3)
d3 = int(3.14159265359**d2)
dano = d1+d3
print(n1-dano)
-- OUTPUT:
189
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 09:31:22) 
-- CODE:
from math import *
n1 = int(input("Pontos de vida do monstro:"))
n2 = int(input("Valor primeiro d20:"))
n3 = int(input("Valor segundo d20:"))
d1 = int((5*n2)**0.5)
d2 = (n3/3)
d3 = int(3.14159265359**d2)
dano = d1+d3
print(n1-dano)
-- EXECUTION TIME:
0.143446
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
189
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
286
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 09:31:27) 
-- CODE:
from math import *
n1 = int(input("Pontos de vida do monstro:"))
n2 = int(input("Valor primeiro d20:"))
n3 = int(input("Valor segundo d20:"))
d1 = int((5*n2)**0.5)
d2 = int(n3/3)
d3 = int(3.14159265359**d2)
dano = d1+d3
print(n1-dano)
-- EXECUTION TIME:
0.168802
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
189
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
286
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 09:32:50) 
-- CODE:
from math import *
n1 = int(input("Pontos de vida do monstro:"))
n2 = int(input("Valor primeiro d20:"))
n3 = int(input("Valor segundo d20:"))
dano = ((5*n2)**0.5) + pi**(n3/3)
print(n1-dano)
-- OUTPUT:
187.89432762141087
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 09:32:59) 
-- CODE:
from math import *
n1 = int(input("Pontos de vida do monstro:"))
n2 = int(input("Valor primeiro d20:"))
n3 = int(input("Valor segundo d20:"))
dano = int((5*n2)**0.5) + pi**(n3/3)
print(n1-dano)
-- OUTPUT:
188.13039559891064
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 09:33:17) 
-- CODE:
from math import *
n1 = int(input("Pontos de vida do monstro:"))
n2 = int(input("Valor primeiro d20:"))
n3 = int(input("Valor segundo d20:"))
dano = int((5*n2)**0.5) + pi**(n3/3)
print(int(n1-dano))
-- OUTPUT:
188
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 09:33:36) 
-- CODE:
from math import *
n1 = int(input("Pontos de vida do monstro:"))
n2 = int(input("Valor primeiro d20:"))
n3 = int(input("Valor segundo d20:"))
dano = ((5*n2)**0.5) + pi**(n3/3)
print(int(n1-dano))
-- EXECUTION TIME:
0.158193
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
187
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
284
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
496
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 09:33:36) 
-- CODE:
from math import *
n1 = int(input("Pontos de vida do monstro:"))
n2 = int(input("Valor primeiro d20:"))
n3 = int(input("Valor segundo d20:"))
dano = ((5*n2)**0.5) + pi**(n3/3)
print(int(n1-dano))
-- OUTPUT:
187
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 09:35:35) 
-- CODE:
from math import *
n1 = int(input("Pontos de vida do monstro:"))
n2 = int(input("Valor primeiro d20:"))
n3 = int(input("Valor segundo d20:"))
d1 = (5*n2)
d2 = d1**0.5
d3 = (n3/3)
d4 = int(pi/d3)
dano = d2+d4
print(int(n1-dano))
-- OUTPUT:
196
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 09:35:48) 
-- CODE:
from math import *
n1 = int(input("Pontos de vida do monstro:"))
n2 = int(input("Valor primeiro d20:"))
n3 = int(input("Valor segundo d20:"))
d1 = (5*n2)
d2 = int(d1**0.5)
d3 = (n3/3)
d4 = int(pi/d3)
dano = d2+d4
print(int(n1-dano))
-- OUTPUT:
197
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 09:36:01) 
-- CODE:
from math import *
n1 = int(input("Pontos de vida do monstro:"))
n2 = int(input("Valor primeiro d20:"))
n3 = int(input("Valor segundo d20:"))
d1 = (5*n2)
d2 = int(d1**0.5)
d3 = int((n3/3))
d4 = int(pi/d3)
dano = d2+d4
print(int(n1-dano))
-- OUTPUT:
197
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 09:38:10) 
-- CODE:
from math import *
n1 = int(input("Pontos de vida do monstro:"))
n2 = int(input("Valor primeiro d20:"))
n3 = int(input("Valor segundo d20:"))
d1 = (5*n2)
d2 = int(d1**0.5)
d3 = int((n3/3))
d4 = int(pi**d3)
dano = d2+d4
print(int(n1-dano))
-- OUTPUT:
189
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 09:38:50) 
-- CODE:
from math import *
n1 = int(input("Pontos de vida do monstro:"))
n2 = int(input("Valor primeiro d20:"))
n3 = int(input("Valor segundo d20:"))
d1 = int(5*n2)
d2 = int(d1**0.5)
d3 = int((n3/3))
d4 = int(pi**d3)
dano = d2+d4
print(int(n1-dano))
-- OUTPUT:
189
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 09:39:22) 
-- CODE:
from math import *
n1 = float(input("Pontos de vida do monstro:"))
n2 = float(input("Valor primeiro d20:"))
n3 = float(input("Valor segundo d20:"))
d1 = int(5*n2)
d2 = int(d1**0.5)
d3 = int((n3/3))
d4 = int(pi**d3)
dano = d2+d4
print(int(n1-dano))
-- OUTPUT:
189
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 09:44:12) 
-- CODE:
from math import *
n1 = int(input("Pontos de vida do monstro:"))
n2 = int(input("Valor primeiro d20:"))
n3 = int(input("Valor segundo d20:"))
dano = ((5.n2)**0.5)+pi**(n3/3)
print(n1-dano)
-- EXECUTION TIME:
0.215189
-- ERROR:
  File "/home/codebench/codes/1593/1802/main.py", line 5
    dano = ((5.n2)**0.5)+pi**(n3/3)
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 09:44:35) 
-- CODE:
from math import *
n1 = int(input("Pontos de vida do monstro:"))
d1 = int(input("Valor primeiro d20:"))
d2 = int(input("Valor segundo d20:"))
dano = ((5.d1)**0.5)+pi**(d2/3)
print(n1-dano)
-- ERROR:
File "XXXX", line 5
    dano = ((5.d1)**0.5)+pi**(d2/3)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 09:44:55) 
-- CODE:
from math import *
n1 = int(input("Pontos de vida do monstro:"))
d1 = int(input("Valor primeiro d20:"))
d2 = int(input("Valor segundo d20:"))
dano = ((5.d1)**0.5)+(pi**(d2/3))
print(n1-dano)
-- ERROR:
File "XXXX", line 5
    dano = ((5.d1)**0.5)+(pi**(d2/3))
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 09:45:03) 
-- CODE:
from math import *
n1 = int(input("Pontos de vida do monstro:"))
d1 = int(input("Valor primeiro d20:"))
d2 = int(input("Valor segundo d20:"))
dano = ((5*d1)**0.5)+(pi**(d2/3))
print(n1-dano)
-- OUTPUT:
187.89432762141087
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 09:45:17) 
-- CODE:
from math import *
n1 = int(input("Pontos de vida do monstro:"))
d1 = int(input("Valor primeiro d20:"))
d2 = int(input("Valor segundo d20:"))
dano = ((5*d1)**0.5)+(pi**(d2/3))
print(int(n1-dano))
-- OUTPUT:
187
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 09:45:25) 
-- CODE:
from math import *
n1 = int(input("Pontos de vida do monstro:"))
d1 = int(input("Valor primeiro d20:"))
d2 = int(input("Valor segundo d20:"))
dano = ((5*d1)**0.5)+(pi**(d2/3))
print(int(n1-dano))
-- EXECUTION TIME:
0.114543
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
187
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
284
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
496
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 09:47:23) 
-- CODE:
from math import *
n1 = int(input("Pontos de vida do monstro:"))
d1 = int(input("Valor primeiro d20:"))
d2 = int(input("Valor segundo d20:"))
n2 = int((5*d1)**0.5)
n3 = int(d2/3)
n4 = int(pi**n3)
print(int(n1-dano))
-- EXECUTION TIME:
0.205764
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1593/1802/main.py", line 8, in <module>
    print(int(n1-dano))
NameError: name 'dano' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 09:47:25) 
-- CODE:
from math import *
n1 = int(input("Pontos de vida do monstro:"))
d1 = int(input("Valor primeiro d20:"))
d2 = int(input("Valor segundo d20:"))
n2 = int((5*d1)**0.5)
n3 = int(d2/3)
n4 = int(pi**n3)
print(int(n1-dano))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(int(n1-dano))
NameError: name 'dano' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 09:47:51) 
-- CODE:
from math import *
n1 = int(input("Pontos de vida do monstro:"))
d1 = int(input("Valor primeiro d20:"))
d2 = int(input("Valor segundo d20:"))
n2 = int((5*d1)**0.5)
n3 = int(d2/3)
n4 = int(pi**n3)
dano = N2+N4
print(int(n1-dano))
-- EXECUTION TIME:
0.212466
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1593/1802/main.py", line 8, in <module>
    dano = N2+N4
NameError: name 'N2' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 09:47:51) 
-- CODE:
from math import *
n1 = int(input("Pontos de vida do monstro:"))
d1 = int(input("Valor primeiro d20:"))
d2 = int(input("Valor segundo d20:"))
n2 = int((5*d1)**0.5)
n3 = int(d2/3)
n4 = int(pi**n3)
dano = N2+N4
print(int(n1-dano))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    dano = N2+N4
NameError: name 'N2' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 09:47:57) 
-- CODE:
from math import *
n1 = int(input("Pontos de vida do monstro:"))
d1 = int(input("Valor primeiro d20:"))
d2 = int(input("Valor segundo d20:"))
n2 = int((5*d1)**0.5)
n3 = int(d2/3)
n4 = int(pi**n3)
dano = n2+n4
print(int(n1-dano))
-- EXECUTION TIME:
0.186668
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
189
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
286
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 09:47:57) 
-- CODE:
from math import *
n1 = int(input("Pontos de vida do monstro:"))
d1 = int(input("Valor primeiro d20:"))
d2 = int(input("Valor segundo d20:"))
n2 = int((5*d1)**0.5)
n3 = int(d2/3)
n4 = int(pi**n3)
dano = n2+n4
print(int(n1-dano))
-- OUTPUT:
189
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 09:48:39) 
-- CODE:
from math import *
n1 = int(input("Pontos de vida do monstro:"))
d1 = int(input("Valor primeiro d20:"))
d2 = int(input("Valor segundo d20:"))
n2 = int((5*d1)**0.5)
n3 = int(d2/3)
n4 = int(pi)
n5 = n4**n3
dano = n2+n5
print(int(n1-dano))
-- EXECUTION TIME:
0.181845
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
189
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
286
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 09:48:42) 
-- CODE:
from math import *
n1 = int(input("Pontos de vida do monstro:"))
d1 = int(input("Valor primeiro d20:"))
d2 = int(input("Valor segundo d20:"))
n2 = int((5*d1)**0.5)
n3 = int(d2/3)
n4 = int(pi)
n5 = n4**n3
dano = n2+n5
print(int(n1-dano))
-- OUTPUT:
189
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 09:53:54) 
-- CODE:
from math import *
n1 = int(input("Pontos de vida do monstro:"))
d1 = int(input("Valor primeiro d20:"))
d2 = int(input("Valor segundo d20:"))
n2 = (5*d1)
n3 = int(n2**0.5)
n4 = int(d2/3)
n5 = int(pi)
n6 = n4**n3
dano = n2+n5
print(int(n1-dano))
-- OUTPUT:
192
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 09:55:48) 
-- CODE:
from math import *
n1 = int(input("Pontos de vida do monstro:"))
d1 = int(input("Valor primeiro d20:"))
d2 = int(input("Valor segundo d20:"))
n2 =  5*d1
n3 = int(n2**0.5)
n4 = int(d2/3)
n5 = pi**n4
dano = n3+n5
print(int(n1-dano))
-- OUTPUT:
188
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 09:55:55) 
-- CODE:
from math import *
n1 = int(input("Pontos de vida do monstro:"))
d1 = int(input("Valor primeiro d20:"))
d2 = int(input("Valor segundo d20:"))
n2 =  5*d1
n3 = int(n2**0.5)
n4 = int(d2/3)
n5 = pi**n4
dano = n3+n5
print(int(n1-dano))
-- EXECUTION TIME:
0.123561
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
188
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
285
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
